# open-story-teller

./: .gitignore  .gitmodules  README.md
core/chip32/tests/: CMakeLists.txt  test_parser.cpp
core/story-manager/tests/: CMakeLists.txt  test_ast.cpp
core/tests/: CMakeLists.txt  catch.hpp  test_ast.cpp  test_branch.cpp  test_json.cpp  test_loops.cpp  test_macros.cpp  test_parser.cpp  test_print_node.cpp  test_vm.cpp
firmware/platform/qt-qml/: CMakeLists.txt  README.md  StoryTellerModel.h  main.cpp  main.qml  qtquickcontrols2.conf
firmware/platform/sipeed-longan-nano/: CMakeLists.txt  audio.h  i2s.c  i2s.h  spi0.c  spi0.h  spi1.c  spi1.h
firmware/test/bmp_decoding/: CMakeLists.txt
software/: .gdbinit  CMakeLists.txt
software/chip32/: chip32_assembler.cpp  chip32_assembler.h  chip32_vm.c  chip32_vm.h
software/chip32/chip32_test/: CMakeLists.txt
software/common/: tlv.h
software/cpu/atmel-samd21/: CMakeLists.txt  include.cmake  spi_display.c  spi_master.h  startup_samd21.c  uart.h
software/cpu/gigadevice-gd32vf103/: CMakeLists.txt  include.cmake  systick.h
software/include/: ost_hal.h
software/platform/arduino-mkr-zero/: CMakeLists.txt  ost_hal_wrapper.c
software/platform/qt-qml/: FrontButton.qml  StoryTellerModel.cpp  StoryView.qml  icon.rc  qml.qrc
software/platform/raspberry-pico-w/: CMakeLists.txt  msc_disk.c  msc_disk.h  pico_hal_wrapper.c  pico_i2s.c  pico_i2s.h  pico_i2s.pio  pico_lcd_spi.c  pico_sdcard_spi.c  pico_sdcard_spi.h  pio_rotary_encoder.pio  tusb_config.h  usb_descriptors.c
software/platform/sipeed-longan-nano/: audio.c  ost_hal_wrapper.c
software/system/: audio_player.c  audio_player.h  debug.c  ff_diskio_sdcard.c  filesystem.c  filesystem.h  fs_task.c  fs_task.h  hmi_task.c  hmi_task.h  libutil.h  loop.cpp  main.c  os.c  os.h  ost_hal.h  ost_tasker.c  ost_tasker.h  picture.c  picture.h  qor.c  qor.h  qor_armv6m.s  qor_armv7m.s  rotary-button.c  rotary-button.h  sdcard.c  serializers.h  sst.c  sst.h  sst_conf.c  sst_conf.h  system.h  time_server.h  usb_task.c  usb_task.h  vm_task.c  vm_task.h
software/system/ff/: diskio.h  ffconf.h
software/test/: platform_validation.c
software/test/bmp_decoding/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
story-editor/: 00_prepare_outdir.sh  01_linux_create_docker_image.sh  03_linux_docker_launch_package.sh  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.linux  NodeEditor.json  OpenStoryEditor-x86_64.AppImage  README.md  build_appimage.sh  build_flatpak.sh  build_linux.sh  build_mingw64.sh  build_win32.sh  create_docker_image_win.sh  icon.rc  imgui.ini  story-editor.desktop  story-editor.kdev4
story-editor/cmake/: mingw-w64-x86_64.cmake
story-editor/delivery/: Dockerfile.linux  Dockerfile.mingw64  linux_02_docker_launch_build.sh  linux_03_docker_launch_package.sh  mingw64_01_docker_build_image.sh  mingw64_02_docker_launch_build.sh
story-editor/libs/: imgui_memory_editor.h
story-editor/libs/ImGuiColorTextEdit/: TextEditor.cpp  TextEditor.h
story-editor/libs/ImGuiFileDialog/: ImGuiFileDialog.cpp
story-editor/libs/imgui-node-editor/: imgui_canvas.cpp  imgui_canvas.h  imgui_node_editor.cpp  imgui_node_editor.h
story-editor/locales/: de.json  en.json  es.json  fr.json
story-editor/ost_convert/: CMakeLists.txt  command_line.cpp  pack_archive.cpp  pack_archive.h
story-editor/packaging/linux/: run.sh
story-editor/scripts/: media.asm  media.chip32  test_compiler.chip32  test_media.chip32
story-editor/src/: CustomImGuiFileDialogConfig.h  LanguageSelector.h  Localization.h  about.ui  base_node.cpp  base_node.h  choose-file.ui  code_editor.cpp  code_editor.h  connection.cpp  connection.h  console_window.cpp  console_window.h  cpu_window.h  dock_widget_base.cpp  dock_widget_base.h  emulator_window.cpp  emulator_window.h  graph.cpp  graph.h  gui.cpp  gui.h  i_story_manager.h  i_story_project.h  imgui_toast_notifier.h  library_window.cpp  library_window.h  log_dock.cpp  log_dock.h  main.cpp  main_window.cpp  main_window.h  media-node.ui  media_converter.cpp  media_converter.h  media_node.cpp  media_node.h  media_node_model.cpp  media_node_model.h  memory_view_dock.cpp  (+48 more)
story-editor/src/app/: app_controller.cpp  app_controller.h  debug_context.h  logger.h  status_bar.h  tool_bar.h
story-editor/src/dialogs/: about_dialog.h  dialog_base.h  module_properties_dialog.h  project_properties_dialog.h
story-editor/src/docks/: emulator_dock.cpp  emulator_dock.h  error_list_dock.cpp  error_list_dock.h  resources_dock.cpp  resources_dock.h
story-editor/src/events/: all_events.h  event.h  event_bus.cpp  event_bus.h
story-editor/src/importers/: ni_parser.c  ni_parser.h  pack_archive.cpp  pack_archive.h
story-editor/src/node_editor/: base_node_widget.cpp  base_node_widget.h  branch_node_widget.cpp  branch_node_widget.h  break_node_widget.cpp  break_node_widget.h  call_function_node_widget.cpp  call_function_node_widget.h  continue_node_widget.cpp  continue_node_widget.h  for_loop_node_widget.cpp  for_loop_node_widget.h  function_entry_node_widget.h  function_entry_widget.h  function_exit_node_widget.h  function_exit_widget.h  function_node_widget.cpp  function_node_widget.h  media_node.cpp  media_node.h  media_node_widget.cpp  media_node_widget.h  module_node_widget.cpp  module_node_widget.h  node_editor_page.h  node_editor_window.cpp  node_editor_window.h  node_widget_factory.h  operator_node_widget.cpp  operator_node_widget.h  play_media_node_widget.cpp  (+15 more)
story-editor/tools/: get_official_db.ts  imgui.ini
story-editor/windows-setup/: openstoryteller-editor.iss
story-player-raylib/: CMakeLists.txt  app.js  index.html  main.c  main.css  raygui.h  style.css  vertical-menu.js
story-player-raylib/classes/: api-client.js  storage.js
story-player-raylib/components/: ParametersDialog.js  TopMenu.js
story-player-sdl/: CMakeLists.txt  build.gradle  gradle.properties  local.properties  story.cmake
story-player-sdl/app/: .gitignore  CMakeLists.txt  build.gradle
story-player-sdl/src/: main.cpp
story-vm/: CMakeLists.txt  index.html  main.js  storyvm.cpp
(+444 files in other folders)
